[metadata]
name = akerun-sum
url = https://github.com/osstech-jp/akerun-sum
version = attr: akerun_sum.__version__
description = Enter and leave data totalization program for Akerun
long_description = file: README.md
long_description_content_type = text/markdown
author = KAWAI Shun
author_email = shun@osstech.co.jp
maintainer = KAWAI Shun
maintainer_email = shun@osstech.co.jp
license = GPL
license_file = LICENSE
classfiers = 
	Environment :: Console
	Natural Language :: Japanese
	Operating System :: Microsoft :: Windows :: Windows 7
	Operating System :: POSIX :: Linux
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	License :: OSI Approved :: GNU General Public License (GPL)

[options]
packages = akerun_sum
zip_safe = false
python_require = '>=3.5'
install_requires =
	click>=7.1

[options.entry_points]
console_scripts =
	akerun-sum = akerun_sum.cli:main
